--- a/style.css
+++ b/style.css
@@ -1,1 +1,104 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(#977DFE, #6878FF);
+}
+
+.wrapper {
+  width: 450px;
+  padding: 25px;
+  border-radius: 7px;
+  background-color: #FFFFFF;
+}
+
+.wrapper .gradient-box {
+  width: 100%;
+  height: 220px;
+  border-radius: 7px;
+  background: linear-gradient(to left top, #977DFE, #6878FF);
+}
+
+.wrapper .row {
+  display: flex;
+  margin: 20px 0;
+  justify-content: space-between;
+}
+
+.wrapper .row > * {
+  flex-basis: calc(50% - 12px);
+}
+
+.option p {
+  font-size: 1.12rem;
+  margin-bottom: 8px;
+}
+
+.options .select-box {
+  border-radius: 5px;
+  padding: 10px 15px;
+  border: 1px solid #aaa;
+}
+
+.options .select-box select {
+  font-size: 1.12rem;
+  width: 100%;
+  border: none;
+  outline: none;
+  background: none;
+}
+
+.options .colors {
+  margin-left: 60px;
+}
+
+.colors input {
+  height: 41px;
+  width: calc(50% - 10px);
+  margin-right: 6px;
+}
+
+.colors input:last-child {
+  margin-right: 0;
+}
+
+.wrapper textarea {
+  width: 100%;
+  color: #333;
+  resize: none;
+  font-size: 1.05rem;
+  border-radius: 5px;
+  padding: 10px 15px;
+  border: 1px solid #ccc;
+}
+
+.buttons button {
+  color: #fff;
+  cursor: pointer;
+  padding: 15px 0;
+  font-size: 1.09rem;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  margin: 0 0 -15px;
+  width: 50%;
+}
+
+.buttons .refresh {
+  background-color: #6c757d;
+}
+
+.buttons .copy {
+  background-color: #8a6cff;
+}
 
